Fix section spacing

--- a/src/components/Page/components/Section/Section.module.scss
+++ b/src/components/Page/components/Section/Section.module.scss
@@ -1,11 +1,6 @@
 .Section {
   position: relative;
-  margin-top: $spacing * 2;
-  margin-bottom: $spacing * 2;
+  margin-top: $spacing * 4;
+  margin-bottom: $spacing * 4;
   transition: background-color $animation-duration ease-in;
-
-  @include large {
-    margin-top: $spacing * 4;
-    margin-bottom: $spacing * 4;
-  }
 }
